0.21
Introduced a custom serialisation mechanism to improve compressed temporary file performance by approximately 5 times.
Added a new RandomAccessObjectStore class which can be used as the basis for smarter tasks requiring access to data multiple times.

0.20
Fixed the integrity reporter task so that it writes new lines after each record.
Relaxed validation checks in the --apply-change task so that it can apply changes to planets already containing data without aborting.

0.19
Added a new --integrity-reporter task to detect referential integrity issues between entity types.
Updated the default file names for report tasks.
Added a new --log-progress task to provide progress information to the jdk log during processing.
Added a new --log-change-progress task to provide change progress information to the jdk log during processing.
Fixed a number of bugs in the area extraction tasks.
Updated area extraction tasks to support negative identifiers used on files that are ready for upload.
Fixed bug in the ChangeWriter where the node insert SQL commands were missing tile parameters.

0.18
Improved error messages when errors are returned from the api.
Added support for new shorter date format excluding millisecond information.
Updated mysql writing code to support the new 0.5 schema version and fixed bugs in node insertion sql.
Added support for quiet and verbose command line options.
Modified command line arguments to default to using 0.5 tasks.

0.17
Added schema version checking to all MySQL tasks.
Updated xml reading tasks to provide line number information when parse errors occur.
Modified xml writing tasks to include the osmosis version number in the generator attribute.
Updated mysql tasks to support the new tile indexing and fixed precision lat/lon.

0.16
Fixed a major bug in UTF-8 handling when writing xml files.  All files were being written in the default character set.

0.15
Added full 0.5 support.
Updated 0.4 code to the 005 schema.

0.14